encargandome de los nodes

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,40 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=640,192
+Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=38,60
-Size=578,436
+Pos=4,36
+Size=578,246
+Collapsed=0
+
+[Window][##node]
+Pos=573,170
+Size=461,438
+Collapsed=0
+
+[Window][A##node]
+Pos=388,205
+Size=516,535
+Collapsed=0
+
+[Window][PEPE##node]
+Pos=246,70
+Size=516,539
+Collapsed=0
+
+[Window][yo##node]
+Pos=60,60
+Size=516,535
+Collapsed=0
+
+[Window][doh##node]
+Pos=60,60
+Size=516,535
+Collapsed=0
+
+[Window][r3##node]
+Pos=60,60
+Size=236,365
 Collapsed=0
 
