estaria teniendo excepciones q aun no se como explicar

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,18 +4,18 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=4,36
+Pos=9,84
 Size=578,246
 Collapsed=0
 
 [Window][##node]
-Pos=573,170
-Size=461,438
+Pos=404,92
+Size=265,390
 Collapsed=0
 
 [Window][A##node]
-Pos=388,205
-Size=516,535
+Pos=766,108
+Size=516,357
 Collapsed=0
 
 [Window][PEPE##node]
@@ -24,7 +24,7 @@ Size=516,539
 Collapsed=0
 
 [Window][yo##node]
-Pos=60,60
+Pos=60,57
 Size=516,535
 Collapsed=0
 
@@ -34,6 +34,31 @@ Size=516,535
 Collapsed=0
 
 [Window][r3##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][HOHO##node]
+Pos=247,320
+Size=236,365
+Collapsed=0
+
+[Window][blah##node]
+Pos=905,148
+Size=236,365
+Collapsed=0
+
+[Window][Ale##node]
+Pos=654,76
+Size=236,365
+Collapsed=0
+
+[Window][J##node]
+Pos=585,123
+Size=236,365
+Collapsed=0
+
+[Window][n##node]
 Pos=60,60
 Size=236,365
 Collapsed=0
