--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=9,84
+Pos=9,82
 Size=578,246
 Collapsed=0
 
@@ -59,6 +59,36 @@ Size=236,365
 Collapsed=0
 
 [Window][n##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][k##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][l##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][ml##node]
+Pos=781,80
+Size=236,365
+Collapsed=0
+
+[Window][pop##node]
+Pos=588,205
+Size=236,365
+Collapsed=0
+
+[Window][tst1##node]
+Pos=621,33
+Size=236,365
+Collapsed=0
+
+[Window][tst2##node]
 Pos=60,60
 Size=236,365
 Collapsed=0
