pase strings a punteros a strings... aun no anda. Le pregunto a los ayudantes por el tema de la realocacion en vectores uy uy uy

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=9,82
+Pos=648,215
 Size=578,246
 Collapsed=0
 
@@ -90,6 +90,51 @@ Collapsed=0
 
 [Window][tst2##node]
 Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][Nyan##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][nuaa##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][pepe##node]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Yo##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][Papanatas##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][Hola don pepito##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][Hola don Jose##node]
+Pos=361,73
+Size=236,365
+Collapsed=0
+
+[Window][oy##node]
+Pos=60,60
+Size=236,365
+Collapsed=0
+
+[Window][me lleva la cachetada##node]
+Pos=354,64
 Size=236,365
 Collapsed=0
 
