mucho q corregir aun, les explico en clase

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=648,215
+Pos=56,99
 Size=578,246
 Collapsed=0
 
 [Window][##node]
-Pos=404,92
+Pos=777,68
 Size=265,390
 Collapsed=0
 
@@ -135,6 +135,31 @@ Collapsed=0
 
 [Window][me lleva la cachetada##node]
 Pos=354,64
+Size=236,365
+Collapsed=0
+
+[Window][tete##node]
+Pos=116,73
+Size=236,365
+Collapsed=0
+
+[Window][jaimito##node]
+Pos=56,63
+Size=236,365
+Collapsed=0
+
+[Window][MI MAMA##node]
+Pos=182,187
+Size=236,365
+Collapsed=0
+
+[Window][FLAT IS JUSTICE##node]
+Pos=56,55
+Size=236,365
+Collapsed=0
+
+[Window][2##node]
+Pos=60,60
 Size=236,365
 Collapsed=0
 
