yo volviendome loco

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=578,246
 Collapsed=0
 
 [Window][##node]
-Pos=777,68
-Size=265,390
+Pos=608,98
+Size=487,409
 Collapsed=0
 
 [Window][A##node]
@@ -161,5 +161,25 @@ Collapsed=0
 [Window][2##node]
 Pos=60,60
 Size=236,365
+Collapsed=0
+
+[Window][gklksfngs##node]
+Pos=618,230
+Size=464,365
+Collapsed=0
+
+[Window][macuca##node]
+Pos=450,90
+Size=464,365
+Collapsed=0
+
+[Window][Pepi <3##node]
+Pos=304,104
+Size=464,365
+Collapsed=0
+
+[Window][jpjp##node]
+Pos=219,80
+Size=464,365
 Collapsed=0
 
