--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,14 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=56,99
-Size=578,246
+Pos=686,35
+Size=521,270
 Collapsed=0
 
 [Window][##node]
-Pos=608,98
-Size=487,409
-Collapsed=0
+Pos=52,125
+Size=705,372
+Collapsed=1
 
 [Window][A##node]
 Pos=766,108
@@ -69,8 +69,8 @@ Size=236,365
 Collapsed=0
 
 [Window][l##node]
-Pos=60,60
-Size=236,365
+Pos=55,55
+Size=486,377
 Collapsed=0
 
 [Window][ml##node]
@@ -181,5 +181,50 @@ Collapsed=0
 [Window][jpjp##node]
 Pos=219,80
 Size=464,365
+Collapsed=0
+
+[Window][blaaaaa##node]
+Pos=460,200
+Size=464,365
+Collapsed=0
+
+[Window][Malu##node]
+Pos=618,82
+Size=464,365
+Collapsed=0
+
+[Window][nom##node]
+Pos=59,20
+Size=464,365
+Collapsed=0
+
+[Window][blaaaaasapr##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][iii##node]
+Pos=60,61
+Size=544,365
+Collapsed=0
+
+[Window][oaoad##node]
+Pos=48,236
+Size=544,365
+Collapsed=0
+
+[Window][45##node]
+Pos=100,94
+Size=544,365
+Collapsed=0
+
+[Window][99##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][oijaida##node]
+Pos=73,131
+Size=544,365
 Collapsed=0
 
