momento de sumar todo esto al branch principal

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=686,35
-Size=521,270
+Pos=392,79
+Size=725,243
 Collapsed=0
 
 [Window][##node]
@@ -226,5 +226,75 @@ Collapsed=0
 [Window][oijaida##node]
 Pos=73,131
 Size=544,365
+Collapsed=0
+
+[Window][55555##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][8##node]
+Pos=580,183
+Size=544,365
+Collapsed=0
+
+[Window][101##node]
+Pos=80,61
+Size=544,365
+Collapsed=0
+
+[Window][102##node]
+Pos=593,130
+Size=544,398
+Collapsed=0
+
+[Window][ggian##node]
+Pos=56,61
+Size=544,365
+Collapsed=0
+
+[Window][ggiab##node]
+Pos=583,211
+Size=544,365
+Collapsed=0
+
+[Window][llllalalla##node]
+Pos=39,47
+Size=544,365
+Collapsed=0
+
+[Window][llllalallo##node]
+Pos=473,300
+Size=544,365
+Collapsed=0
+
+[Window][bhchjvuibuibiogbio##node]
+Pos=60,60
+Size=544,365
+Collapsed=1
+
+[Window][vuihvuibuibuibh##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][pppppppppppppp##node]
+Pos=96,209
+Size=544,365
+Collapsed=0
+
+[Window][toot##node]
+Pos=89,243
+Size=544,365
+Collapsed=0
+
+[Window][toote##node]
+Pos=61,60
+Size=544,368
+Collapsed=0
+
+[Window][tooti##node]
+Pos=607,148
+Size=541,364
 Collapsed=0
 
