Ahora con ventanas incluso en el EDANet

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,14 +4,14 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=392,79
+Pos=435,48
 Size=725,243
 Collapsed=0
 
 [Window][##node]
-Pos=52,125
+Pos=90,298
 Size=705,372
-Collapsed=1
+Collapsed=0
 
 [Window][A##node]
 Pos=766,108
@@ -296,5 +296,330 @@ Collapsed=0
 [Window][tooti##node]
 Pos=607,148
 Size=541,364
+Collapsed=0
+
+[Window][m##node]
+Pos=522,229
+Size=544,365
+Collapsed=0
+
+[Window][mp##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][Carlos##node]
+Pos=65,135
+Size=544,365
+Collapsed=0
+
+[Window][Jorge##node]
+Pos=730,106
+Size=544,365
+Collapsed=0
+
+[Window][El senor conejo##node]
+Pos=278,312
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##Jorge0]
+Pos=75,156
+Size=494,72
+Collapsed=0
+
+[Window][ERROR##Jorge1]
+Pos=60,60
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge2]
+Pos=286,135
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge3]
+Pos=65,83
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge4]
+Pos=68,126
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge5]
+Pos=64,196
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##El senor conejo0]
+Pos=513,47
+Size=457,77
+Collapsed=0
+
+[Window][ERROR##El senor conejo1]
+Pos=564,145
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos0]
+Pos=28,276
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge6]
+Pos=671,28
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Jorge7]
+Pos=677,77
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos1]
+Pos=121,21
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos2]
+Pos=133,116
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos3]
+Pos=60,60
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos4]
+Pos=78,149
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos5]
+Pos=60,60
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos6]
+Pos=172,38
+Size=436,48
+Collapsed=0
+
+[Window][ERROR##Carlos7]
+Pos=266,97
+Size=436,48
+Collapsed=0
+
+[Window][ERROR##Carlos8]
+Pos=368,298
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Carlos9]
+Pos=107,262
+Size=625,48
+Collapsed=0
+
+[Window][Armando Esteban Quito##node]
+Pos=712,345
+Size=544,365
+Collapsed=0
+
+[Window][Flat is Justice##node]
+Pos=51,337
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##Flat is Justice0]
+Pos=60,60
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##Flat is Justice1]
+Pos=50,127
+Size=625,48
+Collapsed=0
+
+[Window][ERROR##Flat is Justice2]
+Pos=61,196
+Size=436,48
+Collapsed=0
+
+[Window][cho cho##node]
+Pos=34,410
+Size=544,365
+Collapsed=0
+
+[Window][nyan nyua##node]
+Pos=607,339
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##cho cho0]
+Pos=48,180
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##nyan nyua0]
+Pos=545,183
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##cho cho1]
+Pos=49,237
+Size=436,48
+Collapsed=0
+
+[Window][ERROR##nyan nyua1]
+Pos=507,238
+Size=625,58
+Collapsed=0
+
+[Window][ERROR##cho cho2]
+Pos=41,289
+Size=625,48
+Collapsed=0
+
+[Window][ERROR##cho cho3]
+Pos=41,341
+Size=625,48
+Collapsed=0
+
+[Window][ERROR##nyan nyua2]
+Pos=678,301
+Size=436,48
+Collapsed=0
+
+[Window][nyan nyuall##node]
+Pos=79,267
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##cho cho4]
+Pos=60,60
+Size=436,48
+Collapsed=0
+
+[Window][nyan nyuallll##node]
+Pos=556,129
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##nyan nyuallll0]
+Pos=55,134
+Size=457,48
+Collapsed=0
+
+[Window][ERROR##nyan nyua3]
+Pos=97,233
+Size=457,61
+Collapsed=0
+
+[Window][ERROR##nyan nyua4]
+Pos=306,38
+Size=436,48
+Collapsed=0
+
+[Window][ERROR##nyan nyua5]
+Pos=367,188
+Size=625,48
+Collapsed=0
+
+[Window][looooo##node]
+Pos=110,291
+Size=545,365
+Collapsed=0
+
+[Window][loooook##node]
+Pos=521,352
+Size=544,365
+Collapsed=0
+
+[Window][llo##node]
+Pos=320,334
+Size=544,365
+Collapsed=0
+
+[Window][ERROR##Main Warnings0]
+Pos=78,182
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings1]
+Pos=66,112
+Size=212,46
+Collapsed=0
+
+[Window][ERROR##Main Warnings2]
+Pos=175,59
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings3]
+Pos=276,125
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings4]
+Pos=222,169
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings5]
+Pos=92,134
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings6]
+Pos=17,69
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings7]
+Pos=60,60
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings8]
+Pos=85,186
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings9]
+Pos=198,296
+Size=212,48
+Collapsed=0
+
+[Window][ERROR##Main Warnings10]
+Pos=60,60
+Size=212,48
+Collapsed=0
+
+[Window][jkjljjopi99##node]
+Pos=409,325
+Size=544,365
+Collapsed=0
+
+[Window][j##node]
+Pos=582,295
+Size=544,365
+Collapsed=0
+
+[Window][jpioj##node]
+Pos=80,224
+Size=544,365
+Collapsed=0
+
+[Window][jpiojp##node]
+Pos=781,110
+Size=544,365
+Collapsed=0
+
+[Window][o[o##node]
+Pos=60,60
+Size=544,365
 Collapsed=0
 
