--- a/EDA TPF2 G3.vcxproj.filters
+++ b/EDA TPF2 G3.vcxproj.filters
@@ -87,6 +87,12 @@
     <ClCompile Include="NodeViewer.cpp">
       <Filter>Source Files\Viewers</Filter>
     </ClCompile>
+    <ClCompile Include="WarningWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WarningWindowHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="subject.h">
@@ -154,6 +160,15 @@
     </ClInclude>
     <ClInclude Include="NodeViewer.h">
       <Filter>Header Files\Viewers</Filter>
+    </ClInclude>
+    <ClInclude Include="WarningWindow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WarningWindowHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="errorType.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
