--- a/EDA TPF2 G3.vcxproj.filters
+++ b/EDA TPF2 G3.vcxproj.filters
@@ -45,12 +45,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="blockChainFinder.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="fileController.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="imgui.cpp">
       <Filter>Source Files\ImGUI</Filter>
     </ClCompile>
@@ -65,9 +59,6 @@
     </ClCompile>
     <ClCompile Include="imgui_widgets.cpp">
       <Filter>Source Files\ImGUI</Filter>
-    </ClCompile>
-    <ClCompile Include="blockChainModel.cpp">
-      <Filter>Source Files\MVC</Filter>
     </ClCompile>
     <ClCompile Include="EDANet.cpp">
       <Filter>Source Files\MVC</Filter>
@@ -97,6 +88,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Block.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -135,12 +129,6 @@
       <Filter>Header Files\ImGUI</Filter>
     </ClInclude>
     <ClInclude Include="blockChain.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="blockChainFinder.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="fileController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="blockChainModel.h">
@@ -183,6 +171,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="sSocket.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="block.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
