--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=435,48
+Pos=152,83
 Size=725,243
 Collapsed=0
 
@@ -49,8 +49,8 @@ Size=236,365
 Collapsed=0
 
 [Window][Ale##node]
-Pos=654,76
-Size=236,365
+Pos=22,95
+Size=476,378
 Collapsed=0
 
 [Window][J##node]
@@ -625,6 +625,11 @@ Collapsed=0
 
 [Window][mmm##node]
 Pos=105,295
+Size=544,365
+Collapsed=0
+
+[Window][Alex##node]
+Pos=703,111
 Size=544,365
 Collapsed=0
 
