--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=152,83
+Pos=173,83
 Size=725,243
 Collapsed=0
 
@@ -629,12 +629,12 @@ Size=544,365
 Collapsed=0
 
 [Window][Alex##node]
-Pos=703,114
+Pos=703,111
 Size=544,365
 Collapsed=0
 
-[Window][adlck##node]
-Pos=47,277
+[Window][Gian##node]
+Pos=340,172
 Size=544,365
 Collapsed=0
 
