--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=152,82
-Size=725,243
+Pos=233,13
+Size=725,272
 Collapsed=0
 
 [Window][##node]
-Pos=90,298
+Pos=74,309
 Size=705,372
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=236,365
 Collapsed=0
 
 [Window][Ale##node]
-Pos=22,95
+Pos=616,318
 Size=476,378
 Collapsed=0
 
@@ -545,7 +545,7 @@ Collapsed=0
 
 [Window][ERROR##Main Warnings0]
 Pos=78,182
-Size=212,48
+Size=241,107
 Collapsed=0
 
 [Window][ERROR##Main Warnings1]
@@ -629,7 +629,7 @@ Size=544,365
 Collapsed=0
 
 [Window][Alex##node]
-Pos=68,320
+Pos=64,317
 Size=544,365
 Collapsed=0
 
@@ -650,6 +650,61 @@ Collapsed=0
 
 [Window][Al##node]
 Pos=613,329
+Size=544,365
+Collapsed=0
+
+[Window][liyguyfgv##node]
+Pos=538,311
+Size=544,365
+Collapsed=0
+
+[Window][vfssf##node]
+Pos=509,222
+Size=544,373
+Collapsed=0
+
+[Window][grbeag##node]
+Pos=65,258
+Size=544,365
+Collapsed=0
+
+[Window][/;khgiily##node]
+Pos=563,405
+Size=544,400
+Collapsed=0
+
+[Window][[iuhiuh##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][bjvjv##node]
+Pos=662,329
+Size=544,365
+Collapsed=0
+
+[Window][jhkjbhiu##node]
+Pos=90,321
+Size=544,365
+Collapsed=0
+
+[Window][feq##node]
+Pos=72,126
+Size=544,365
+Collapsed=0
+
+[Window][koo##node]
+Pos=628,74
+Size=544,365
+Collapsed=0
+
+[Window][Mati##node]
+Pos=41,231
+Size=544,365
+Collapsed=0
+
+[Window][Miranda##node]
+Pos=593,211
 Size=544,365
 Collapsed=0
 
