Al menos anda el filter xd

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=228,8
+Pos=220,5
 Size=725,272
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=236,365
 Collapsed=0
 
 [Window][Ale##node]
-Pos=616,318
+Pos=613,316
 Size=476,378
 Collapsed=0
 
@@ -629,7 +629,7 @@ Size=544,365
 Collapsed=0
 
 [Window][Alex##node]
-Pos=64,317
+Pos=53,304
 Size=544,365
 Collapsed=0
 
@@ -785,6 +785,11 @@ Collapsed=0
 
 [Window][xx##node]
 Pos=512,179
+Size=544,365
+Collapsed=0
+
+[Window][Alezx##node]
+Pos=48,279
 Size=544,365
 Collapsed=0
 
