Quilombo con merkleBlock y get BlockHeader

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=437,402
 Collapsed=0
 
 [Window][EDANet]
-Pos=220,5
+Pos=213,7
 Size=725,272
 Collapsed=0
 
@@ -49,8 +49,8 @@ Size=236,365
 Collapsed=0
 
 [Window][Ale##node]
-Pos=613,316
-Size=476,378
+Pos=605,237
+Size=593,516
 Collapsed=0
 
 [Window][J##node]
@@ -629,7 +629,7 @@ Size=544,365
 Collapsed=0
 
 [Window][Alex##node]
-Pos=53,304
+Pos=51,304
 Size=544,365
 Collapsed=0
 
@@ -790,6 +790,16 @@ Collapsed=0
 
 [Window][Alezx##node]
 Pos=48,279
+Size=544,365
+Collapsed=0
+
+[Window][AAA##node]
+Pos=16,331
+Size=544,365
+Collapsed=0
+
+[Window][AAAA##node]
+Pos=598,311
 Size=544,365
 Collapsed=0
 
