--- a/imgui.ini
+++ b/imgui.ini
@@ -639,7 +639,7 @@ Size=544,365
 Collapsed=0
 
 [Window][dd##node]
-Pos=60,60
+Pos=160,364
 Size=544,365
 Collapsed=0
 
@@ -800,6 +800,111 @@ Collapsed=0
 
 [Window][AAAA##node]
 Pos=598,311
+Size=544,365
+Collapsed=0
+
+[Window][ffff##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][jjj##node]
+Pos=681,345
+Size=544,365
+Collapsed=0
+
+[Window][jjjmmm##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][4##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][cdddcd##node]
+Pos=552,156
+Size=544,365
+Collapsed=0
+
+[Window][cdddcdcd##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][edede##node]
+Pos=254,317
+Size=544,365
+Collapsed=0
+
+[Window][ededefe##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][cfc##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][frfrr##node]
+Pos=308,336
+Size=544,365
+Collapsed=0
+
+[Window][777##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][deded##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][cff##node]
+Pos=241,266
+Size=544,365
+Collapsed=0
+
+[Window][cff n##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][ee##node]
+Pos=305,205
+Size=544,365
+Collapsed=0
+
+[Window][ee77##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][jdjdjdj##node]
+Pos=217,272
+Size=544,365
+Collapsed=0
+
+[Window][jdjdjdjd##node]
+Pos=60,60
+Size=544,365
+Collapsed=0
+
+[Window][jdjdj##node]
+Pos=254,397
+Size=544,365
+Collapsed=0
+
+[Window][hdhd##node]
+Pos=279,383
+Size=544,365
+Collapsed=0
+
+[Window][ll##node]
+Pos=60,60
 Size=544,365
 Collapsed=0
 
