--- a/imgui.ini
+++ b/imgui.ini
@@ -908,3 +908,13 @@ Pos=60,60
 Size=544,365
 Collapsed=0
 
+[Window][Alx##node]
+Pos=48,234
+Size=544,365
+Collapsed=0
+
+[Window][Alwx##node]
+Pos=602,231
+Size=544,365
+Collapsed=0
+
